[package]
authors = ["Simon Poirier <simpoir@gmail.com>"]
edition = "2018"
name = "imap_block"
version = "0.1.0"
license = "MIT"

[profile.release]
lto = true
panic = 'abort'

[dependencies]
async-imap = "0.2.0"
urlparse = "0.7.3"
async-std = {version = "1.5.0", features = ["std", "attributes"]}
async-native-tls = "0.3.3"
log = "0.4.8"
env_logger = "0.7.1"

[dev-dependencies]
tempfile = "3.1.0"
textwrap = "0.11.0"
