[package]
authors = ["Simon Poirier <simpoir@gmail.com>"]
edition = "2018"
name = "imap_block"
version = "0.1.1"
license = "MIT"

[profile.release]
lto = true
panic = 'abort'
opt-level = "s"
strip = true

[dependencies]
async-imap = "*"
urlparse = "*"
async-std = {version = "*", features = ["std", "attributes"]}
async-native-tls = "*"
log = "*"
env_logger = "*"

[dev-dependencies]
tempfile = "3.1.0"
textwrap = "0.11.0"
